--- a/_config.yml
+++ b/_config.yml
@@ -4,14 +4,14 @@ SEOTitle: Aiah的博客 | Aiah's Blog
 header-img: img/post-bg-desk.jpg
 email: aiahwang@163.com
 description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, Aiah的博客, NLP, text summarization, abstractive summarization, multi-document summarization, text generation"
+keyword: "AIAH'S BLOG, Aiah的博客, NLP, text summarization, abstractive summarization, multi-document summarization, text generation"
 url: "http://aiah.github.io"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/aiah/aiah.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "I Love NLP!"
 sidebar-avatar: /img/about-myself.jpeg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
